--- a/.github/workflows/import-data.yaml
+++ b/.github/workflows/import-data.yaml
@@ -1,7 +1,6 @@
-on:
-  push:
-    branches: master
-
+name: import-data-act
+on: [push]
+  
 jobs:
   import-data:
     runs-on: ubuntu-latest
@@ -15,6 +14,7 @@ jobs:
           packages: |
             any::tidyverse 
             any::googlesheets4
+            any::gt
 
       - name: Check out repository
         uses: actions/checkout@v3
