--- a/.github/workflows/import-data.yaml
+++ b/.github/workflows/import-data.yaml
@@ -5,9 +5,17 @@ jobs:
   import-data:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+        
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+            tinytex: true
+            
       - name: Install packages
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
@@ -15,11 +23,16 @@ jobs:
             any::tidyverse 
             any::googlesheets4
 
-      - name: Check out repository
-        uses: actions/checkout@v3
-
       - name: Import data
         run: Rscript -e 'source("import-data.R")'
+
+      - name: Publish to Github Pages (and render)
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+            target: gh-pages
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+  
 
       - name: Commit results
         run: |
