add janitor package in action script

--- a/.github/workflows/import-data.yaml
+++ b/.github/workflows/import-data.yaml
@@ -21,6 +21,7 @@ jobs:
         with:
           packages: |
             any::tidyverse 
+            any::janitor
             any::googlesheets4
 
       - name: Import data
